<rdar://problem/8657116> fast/text/justification-padding-mid-word.html fails on Windows https://bugs.webkit.org/show_bug.cgi?id=49378

Reviewed by Darin Adler.

WebCore:

* platform/graphics/win/UniscribeController.cpp:
(WebCore::UniscribeController::shapeAndPlaceItem): For all characters that need to be treated
as zero-width spaces, substitute the space glyph with zero advance. Apply justification padding
and word spacing only at characters treated as (non-zero-width) spaces.

LayoutTests:

* platform/win/fast/text/justification-padding-mid-word-expected.txt: Removed Windows-specific
expected failure.



Canonical link: https://commits.webkit.org/62346@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71870 268f45cc-cd09-0410-ab3c-d52691b4dbfc